--- a/index.html
+++ b/index.html
@@ -183,23 +183,23 @@
             <div class="basementlevel-menities-icons">
               <div>
                 <img class="icon-image" src="img/noun-electric-car-5077419.png" alt="Image 3">
-                <h3>Electrical Car Charger Point</h3>
+                <h3 style="font-size: small; font-weight: bold;">Electrical Car Charger Point</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-car-wash-6686249.png" alt="Image 3">
-                <h3>Provision for car wash</h3>
+                <h3 style="font-size: small; font-weight: bold;">Provision for car wash</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-laundry-2208483.png" alt="Image 3">
-                <h3>provision for Laundary Facility</h3>
+                <h3 style="font-size: small; font-weight: bold;">provision for Laundary Facility</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-garbage-1581790.png" alt="Image 3">
-                <h3>Garbage Collection Through Garbage Chutes</h3>
+                <h3 style="font-size: small; font-weight: bold;">Garbage Collection Through Garbage Chutes</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-cleaning-2836358.png" alt="Image 3">
-                <h3>Toilets for Drivers & Maids</h3>
+                <h3 style="font-size: small; font-weight: bold;">Toilets for Drivers & Maids</h3>
               </div>
             </div>
           </div>
@@ -208,51 +208,51 @@
             <div class="sitelevel-menities-icons">
               <div>
                 <img class="icon-image" src="img/noun-ground-floor-5092529.png" alt="Image 3">
-                <h3>Residence Free Ground Floor</h3>
+                <h3 style="font-size: small; font-weight: bold;">Residence Free Ground Floor</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-pedestrian-5005795.png" alt="Image 3">
-                <h3>Pedestrian Friendly Podium</h3>
+                <h3 style="font-size: small; font-weight: bold;">Pedestrian Friendly Podium</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-running-32764.png" alt="Image 3">
-                <h3>Pedestrian Path Way/Jogging Track</h3>
+                <h3 style="font-size: small; font-weight: bold;">Pedestrian Path Way/Jogging Track</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/Bicycle-raiding-removebg.png" alt="Image 3">
-                <h3>Bicycling Track</h3>
+                <h3 style="font-size: small; font-weight: bold;">Bicycling Track</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/landscape.png" alt="Image 3">
-                <h3>Landscaped Lawns</h3>
+                <h3 style="font-size: small; font-weight: bold;">Landscaped Lawns</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/children-playground.jpg" alt="Image 3">
-                <h3>Children's Play Area</h3>
+                <h3 style="font-size: small; font-weight: bold;">Children's Play Area</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-waiting-59527.png" alt="Image 3">
-                <h3>Informal Seating Area</h3>
+                <h3 style="font-size: small; font-weight: bold;">Informal Seating Area</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-amphitheatre-5439506.png" alt="Image 3">
-                <h3>Amphitheatre</h3>
+                <h3 style="font-size: small; font-weight: bold;">Amphitheatre</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-tennis-court-2093202.png" alt="Image 3">
-                <h3>Tennis Court</h3>
+                <h3 style="font-size: small; font-weight: bold;">Tennis Court</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-golf-4202277.png" alt="Image 3">
-                <h3>Mini Golf Putting</h3>
+                <h3 style="font-size: small; font-weight: bold;">Mini Golf Putting</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-cricket-2022446.png" alt="Image 3">
-                <h3>Cricket Practice Net</h3>
+                <h3 style="font-size: small; font-weight: bold;">Cricket Practice Net</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-football-field-510509.png" alt="Image 3">
-                <h3>Mini Soccer Lawn</h3>
+                <h3 style="font-size: small; font-weight: bold;">Mini Soccer Lawn</h3>
               </div>
             </div>
           </div>
@@ -260,35 +260,35 @@
             <div class="block-amen">
               <div>
                 <img class="icon-image" src="img/noun-playground-6042871.png" alt="Image 3">
-                <h3>Kids Play Zone</h3>
+                <h3 style="font-size: small; font-weight: bold;">Kids Play Zone</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-swimming-pool-6697758.png" alt="Image 3">
-                <h3>Swimming Pool</h3>
+                <h3 style="font-size: small; font-weight: bold;">Swimming Pool</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-cafe-107974.png" alt="Image 3">
-                <h3>Cafe</h3>
+                <h3 style="font-size: small; font-weight: bold;">Cafe</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-workshop-2562341.png" alt="Image 3">
-                <h3>Arts and Crafts/Creative Workshop Zone</h3>
+                <h3 style="font-size: small; font-weight: bold;">Arts and Crafts/Creative Workshop Zone</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-squash-4133787.png" alt="Image 3">
-                <h3>Squash Court</h3>
+                <h3 style="font-size: small; font-weight: bold;">Squash Court</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-entrance-115438.png" alt="Image 3">
-                <h3>Grand Entrance Lounge</h3>
+                <h3 style="font-size: small; font-weight: bold;">Grand Entrance Lounge</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-seating-5343607.png" alt="Image 3">
-                <h3>Senior Citizen Seating Zone</h3>
+                <h3 style="font-size: small; font-weight: bold;">Senior Citizen Seating Zone</h3>
               </div>
               <div>
                 <img class="icon-image" src="img/noun-ludo-game-5420134.png" alt="Image 3">
-                <h3>Board Game Zone</h3>
+                <h3 style="font-size: small; font-weight: bold;">Board Game Zone</h3>
               </div>
             </div>
           </div>
