--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script defer src="index.js"></script>
   <title>Tutorial</title>
+  <style>
+    #carouselExampleIndicators {
+        background-color: transparent !important;
+    }
+</style>
+
 </head>
 
 <body>
 
-  <header class="header">
+  <!-- <header class="header">
     <div class="top-bar">
       <div class="top-bar__content">
         <a href="#" class="logo">
@@ -41,48 +47,40 @@
         </section>
       </div>
 
-    </div>
+    </div> -->
 
-    <div class="bottom-bar" id="bottomBar">
-      <div class="bottom-bar__content">
-
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="btn" href="#">Home</a>
-            </li>
-            <li class="nav__item">
-              <a class="btn" href="#">Gallery</a>
-            </li>
-            <li class="nav__item">
-              <a class="btn" href="#">Amenities</a>
-            </li>
-            <li class="nav__item">
-              <a class="btn" href="#">Contact Us</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="hamburger">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
+  <nav class="navbar">
+    <div class="navbar-container container">
+      <input type="checkbox" name="" id="">
+      <div class="hamburger-lines">
+        <span class="line line1"></span>
+        <span class="line line2"></span>
+        <span class="line line3"></span>
       </div>
+      <ul class="menu-items">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Category</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Testimonial</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <h1 class="logo"><img src="https://arkaapartments.com/assets/img/wlogo.png" height="50"></h1>
     </div>
-  </header>
+  </nav>
   <video id="headvid" autoplay muted loop width="100%">
     <source src="img/InShot_20240324_230257721.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <div>
-    <marquee style="font-weight: bolder;font-size: larger;text-align: center;" scrollamount="15">UNDER CONSTRUCTION
+    <marquee style="font-weight: bolder;font-size: larger;text-align: center;" scrollamount="10">UNDER CONSTRUCTION
       PROJECT - POSSESSION DEC 2027</marquee>
   </div>
   <main
-    style="background-image: url(https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDF8fHJlZWwlMjBlc3RhdGV8ZW58MHx8MHx8fDA%3D);background-repeat: no-repeat;background-size: cover;">
+    style="background-image:url('img/WhatsApp\ Image\ 2023-12-13\ at\ 15.08.16_4c6228cf.jpg') ;background-repeat: no-repeat;background-size: cover;">
     <div>
       <div class="main">
-        <h1 class="heading">Welcome To Arka <div class=" roller">
+        <h1 class="heading" style="background-color:#666;">Welcome To Arka <div class=" roller">
             <span id="rolltext">
               Your Dream House is awaits here....<br />
           </div>
@@ -295,18 +293,18 @@
         </div>
       </div>
     </div>
-    <div >
+    <div>
       <div style="text-align: center;">
         <h2>ARKA Area Location</h2>
       </div>
 
-      <div class="iframe-container" >
+      <div class="iframe-container">
         <iframe width="200" height="400" src="https://www.youtube.com/embed/RpAdFwuc2vM?si=j09FCwd8Cciq-PW7"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
-      <div style="margin-bottom: 200px;" >
+      <div style="margin-bottom: 200px;">
         <h2 style="text-align: center;">Floor Plans</h2>
         <div class="gallery-wrapper">
           <div class="image-wrapper">
@@ -328,8 +326,8 @@
             </a>
           </div>
         </div>
-        <div class="gallery-lightboxes"  >
-  
+        <div class="gallery-lightboxes">
+
           <div class="image-lightbox" id="lightbox-image-1">
             <div class="image-lightbox-wrapper">
               <a href="#" class="close"></a>
@@ -339,7 +337,7 @@
               <div class="image-title">Site Layout</div>
             </div>
           </div>
-  
+
           <div class="image-lightbox" id="lightbox-image-2">
             <div class="image-lightbox-wrapper">
               <a href="#" class="close"></a>
@@ -349,7 +347,7 @@
               <div class="image-title">A & F Blocks</div>
             </div>
           </div>
-  
+
           <div class="image-lightbox" id="lightbox-image-3">
             <div class="image-lightbox-wrapper">
               <a href="#" class="close"></a>
@@ -359,12 +357,75 @@
               <div class="image-title">C & D Blocks</div>
             </div>
           </div>
-  
+
         </div>
-  
+
       </div>
     </div>
-    
+
+    <div style="margin-bottom: 200px">
+      <h2 style="text-align: center;">Our Gallery</h2>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="background-color: transparent">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" style="padding: 80px;">
+          <div class="item active">
+            <img src="img/01.jpg" alt="First slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/02.jpg" alt="Second slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/03.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/04.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/05.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/06.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/07.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/08.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/09.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/10.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/11.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/12.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/13.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/14.jpg" alt="Third slide" loading="lazy">
+          </div>
+          
+        </div>
+        <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
     <footer>
       <div class="social-icons">
         <!-- Facebook Icon -->
