--- a/index.html
+++ b/index.html
@@ -29,26 +29,6 @@
 </head>
 
 <body>
-
-  <!-- <header class="header">
-    <div class="top-bar">
-      <div class="top-bar__content">
-        <a href="#" class="logo">
-          <img class="logo__img" src="https://arkaapartments.com/assets/img/wlogo.png" alt="logo" width="110"
-            height="100">
-        </a>
-        <section class="phone">
-          <i class="fa-solid fa-phone icon"></i>
-          <span>1-800-922-0444</span>
-        </section>
-        <section class="email">
-          <i class="fa-solid fa-envelope icon"></i>
-          <span>info@cloudservices.com</span>
-        </section>
-      </div>
-
-    </div> -->
-
   <nav class="navbar">
     <div class="navbar-container container">
       <input type="checkbox" name="" id="">
@@ -59,11 +39,11 @@
       </div>
       <ul class="menu-items">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Category</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">Testimonial</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#about-us">About Us</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#amenities">Amenities</a></li>
+        <li><a href="#floor-plans">Floor Plans</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=7981937439&text=Hey There!!%20there!">Contact Us</a></li>
       </ul>
       <h1 class="logo"><img src="https://arkaapartments.com/assets/img/wlogo.png" height="50"></h1>
     </div>
@@ -80,7 +60,7 @@
     style="background-image:url('img/WhatsApp\ Image\ 2023-12-13\ at\ 15.08.16_4c6228cf.jpg') ;background-repeat: no-repeat;background-size: cover;">
     <div>
       <div class="main">
-        <h1 class="heading" style="background-color:#666;">Welcome To Arka <div class=" roller">
+        <h1 class="heading" >Welcome To Arka <div class=" roller">
             <span id="rolltext">
               Your Dream House is awaits here....<br />
           </div>
@@ -120,7 +100,7 @@
     background: black;
     margin-bottom: 50px;">
     <div
-      style="background-image: url(img/bg-project-highlights2.jpg); background-repeat: no-repeat; background-size:cover;">
+      style="background-image: url(img/bg-project-highlights2.jpg); background-repeat: no-repeat; background-size:cover;" id="about-us">
       <div class="project-highlights">
         <h2>Project Highlights</h2>
         <ul>
@@ -168,7 +148,7 @@
       </div>
     </div>
     <div>
-      <div class="tabs">
+      <div class="tabs" id="amenities">
         <input type="radio" name="tab" id="tab1" checked="checked">
         <label for="tab1">Basement Level Amenities</label>
         <input type="radio" name="tab" id="tab2">
@@ -304,7 +284,7 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
-      <div style="margin-bottom: 200px;">
+      <div  class="site-con" id="floor-plans" >
         <h2 style="text-align: center;">Floor Plans</h2>
         <div class="gallery-wrapper">
           <div class="image-wrapper">
@@ -363,59 +343,64 @@
       </div>
     </div>
 
-    <div style="margin-bottom: 200px">
-      <h2 style="text-align: center;">Our Gallery</h2>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="background-color: transparent">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" style="padding: 80px;">
-          <div class="item active">
-            <img src="img/01.jpg" alt="First slide" loading="lazy">
+    <div style="margin-bottom: 200px ;" class="gall-con" id="gallery">
+      <h2 style="text-align: center;" class="gall-header">Our Gallery</h2>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="background-color: white">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+          </ol>
+          <div class="carousel-inner" style="padding: 80px;">
+            <div class="item active">
+              <img src="img/01.jpg" alt="First slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/02.jpg" alt="Second slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/03.jpg" alt="Third slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/6.jpg" alt="Fourth slide"  loading="eager">
+            </div>
+            <div class="item">
+              <img src="img/08.jpg" alt="Fifth slide" loading="eager">
+            </div>
+            <div class="item">
+              <img src="img/09.jpg" alt="Sixth slide" loading="eager">
+            </div>
+            <div class="item">
+              <img src="img/10.jpg" alt="Seventh slide" loading="eager">
+            </div>
+            <!-- 
+            <div class="item">
+              <img src="img/08.jpg" alt="Third slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/09.jpg" alt="Third slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/10.jpg" alt="Third slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/11.jpg" alt="Third slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/12.jpg" alt="Third slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/13.jpg" alt="Third slide" loading="lazy">
+            </div>
+            <div class="item">
+              <img src="img/14.jpg" alt="Third slide" loading="lazy">
+            </div> -->
+            
           </div>
-          <div class="item">
-            <img src="img/02.jpg" alt="Second slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/03.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/04.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/05.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/06.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/07.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/08.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/09.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/10.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/11.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/12.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/13.jpg" alt="Third slide" loading="lazy">
-          </div>
-          <div class="item">
-            <img src="img/14.jpg" alt="Third slide" loading="lazy">
-          </div>
-          
-        </div>
         <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left"></span>
           <span class="sr-only">Previous</span>
@@ -426,8 +411,8 @@
         </a>
       </div>
     </div>
-    <footer>
-      <div class="social-icons">
+    <footer id="contact-us">
+      <div class="social-icons" id="contact-us">
         <!-- Facebook Icon -->
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <!-- Twitter Icon -->
