links are added

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
       </h1>
       <div class="image-container">
         <div>
-          <img class="icon-image" src="img/address-icon.svg" alt="Image 1">
+          <img class="icon-image" src="img/location.png" alt="Image 1">
           <p>Khajaguda</p>
         </div>
         <div>
-          <img class="icon-image" src="img/icons8-bedroom-interior-50.png" alt="Image 2">
+          <img class="icon-image" src="img/bedroom (1).png" alt="Image 2">
           <p>3 & 4 BHK Unit Types</p>
         </div>
         <div>
-          <img class="icon-image" src="img/icons8-building-50.png" alt="Image 3">
+          <img class="icon-image" src="img/office-building.png" alt="Image 3">
           <p>43 Floors & 1204 Units</p>
         </div>
         <div>
-          <img class="icon-image" src="img/icons8-width-50.png" alt="Image 4">
+          <img class="icon-image" src="img/area-graph.png" alt="Image 4">
           <p>9.25 Acres</p>
         </div>
       </div>
@@ -160,24 +160,24 @@
           <div id="tab-content-1" class="tab-content">
             <div class="basementlevel-menities-icons">
               <div>
-                <img class="icon-image" src="img/noun-electric-car-5077419.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Electrical Car Charger Point</h3>
+                <img class="icon-image" src="img/charging.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Electrical Car Charger Point</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-car-wash-6686249.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Provision for car wash</h3>
+                <img class="icon-image" src="img/car-wash.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Provision for car wash</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-laundry-2208483.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">provision for Laundary Facility</h3>
+                <img class="icon-image" src="img/washing-machine.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">provision for Laundary Facility</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-garbage-1581790.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Garbage Collection Through Garbage Chutes</h3>
+                <img class="icon-image" src="img/garbage.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Garbage Collection Through Garbage Chutes</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-cleaning-2836358.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Toilets for Drivers & Maids</h3>
+                <img class="icon-image" src="img/maid.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Toilets for Drivers & Maids</h3>
               </div>
             </div>
           </div>
@@ -185,88 +185,88 @@
 
             <div class="sitelevel-menities-icons">
               <div>
-                <img class="icon-image" src="img/noun-ground-floor-5092529.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Residence Free Ground Floor</h3>
+                <img class="icon-image" src="img/building (1).png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Residence Free Ground Floor</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-pedestrian-5005795.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Pedestrian Friendly Podium</h3>
+                <img class="icon-image" src="img/pedestrian.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Pedestrian Friendly Podium</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-running-32764.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Pedestrian Path Way/Jogging Track</h3>
+                <img class="icon-image" src="img/race-track.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Pedestrian Path Way/Jogging Track</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/Bicycle-raiding-removebg.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Bicycling Track</h3>
+                <img class="icon-image" src="img/track (1).png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Bicycling Track</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/landscape.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Landscaped Lawns</h3>
+                <img class="icon-image" src="img/landscape (1).png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Landscaped Lawns</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/children-playground.jpg" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Children's Play Area</h3>
+                <img class="icon-image" src="img/playground.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Children's Play Area</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-waiting-59527.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Informal Seating Area</h3>
+                <img class="icon-image" src="img/waiting-area.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Informal Seating Area</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-amphitheatre-5439506.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Amphitheatre</h3>
+                <img class="icon-image" src="img/amphitheatre.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Amphitheatre</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-tennis-court-2093202.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Tennis Court</h3>
+                <img class="icon-image" src="img/tennis-court.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Tennis Court</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-golf-4202277.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Mini Golf Putting</h3>
+                <img class="icon-image" src="img/golf.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Mini Golf Putting</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-cricket-2022446.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Cricket Practice Net</h3>
+                <img class="icon-image" src="img/cricket.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Cricket Practice Net</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-football-field-510509.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Mini Soccer Lawn</h3>
+                <img class="icon-image" src="img/football.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Mini Soccer Lawn</h3>
               </div>
             </div>
           </div>
           <div id="tab-content-3" class="tab-content">
             <div class="block-amen">
               <div>
-                <img class="icon-image" src="img/noun-playground-6042871.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Kids Play Zone</h3>
+                <img class="icon-image" src="img/playground.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Kids Play Zone</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-swimming-pool-6697758.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Swimming Pool</h3>
+                <img class="icon-image" src="img/swimming-pool.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Swimming Pool</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-cafe-107974.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Cafe</h3>
+                <img class="icon-image" src="img/cafe.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Cafe</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-workshop-2562341.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Arts and Crafts/Creative Workshop Zone</h3>
+                <img class="icon-image" src="img/arts-and-crafts.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Arts and Crafts/Creative Workshop Zone</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-squash-4133787.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Squash Court</h3>
+                <img class="icon-image" src="img/court.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Squash Court</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-entrance-115438.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Grand Entrance Lounge</h3>
+                <img class="icon-image" src="img/entrance.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Grand Entrance Lounge</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-seating-5343607.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Senior Citizen Seating Zone</h3>
+                <img class="icon-image" src="img/waiting-area.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Senior Citizen Seating Zone</h3>
               </div>
               <div>
-                <img class="icon-image" src="img/noun-ludo-game-5420134.png" alt="Image 3">
-                <h3 style="font-size: small; font-weight: bold;">Board Game Zone</h3>
+                <img class="icon-image" src="img/adventure-game.png" alt="Image 3">
+                <h3 style="font-size: large; font-weight: bold;">Board Game Zone</h3>
               </div>
             </div>
           </div>
