--- a/index.html
+++ b/index.html
@@ -19,16 +19,47 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script defer src="index.js"></script>
-  <title>Tutorial</title>
+  <title>ARKA</title>
   <style>
     #carouselExampleIndicators {
-        background-color: transparent !important;
+      background-color: transparent !important;
     }
-</style>
+  </style>
 
 </head>
 
 <body>
+  <script type="text/javascript">
+    function DownloadFile(fileName) {
+        //Set the File URL.
+        var url = fileName;
+
+        //Create XMLHTTP Request.
+        var req = new XMLHttpRequest();
+        req.open("GET", url, true);
+        req.responseType = "blob";
+        req.onload = function () {
+            //Convert the Byte Data to BLOB object.
+            var blob = new Blob([req.response], { type: "application/octetstream" });
+
+            //Check the Browser type and download the File.
+            var isIE = false || !!document.documentMode;
+            if (isIE) {
+                window.navigator.msSaveBlob(blob, fileName);
+            } else {
+                var url = window.URL || window.webkitURL;
+                link = url.createObjectURL(blob);
+                var a = document.createElement("a");
+                a.setAttribute("download", fileName);
+                a.setAttribute("href", link);
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+            }
+        };
+        req.send();
+    };
+</script>
   <nav class="navbar">
     <div class="navbar-container container">
       <input type="checkbox" name="" id="">
@@ -47,6 +78,10 @@
       </ul>
       <h1 class="logo"><img src="https://arkaapartments.com/assets/img/wlogo.png" height="50"></h1>
     </div>
+    
+  <div class="button-container">
+    <input type="button" value="Download Browchure" class="left-button" onclick="DownloadFile('img/Arka Mini Brochure (1).pdf')" />
+  </div>
   </nav>
   <video id="headvid" autoplay muted loop width="100%">
     <source src="img/InShot_20240324_230257721.mp4" type="video/mp4">
@@ -56,13 +91,13 @@
     <marquee style="font-weight: bolder;font-size: larger;text-align: center;" scrollamount="10">UNDER CONSTRUCTION
       PROJECT - POSSESSION DEC 2027</marquee>
   </div>
-  <main
+  <main id="back"
     style="background-image:url('img/WhatsApp\ Image\ 2023-12-13\ at\ 15.08.16_4c6228cf.jpg') ;background-repeat: no-repeat;background-size: cover;">
     <div>
       <div class="main">
-        <h1 class="heading" >Welcome To Arka <div class=" roller">
+        <h1 class="heading" style=" color: #FF0000;">Welcome To Arka <div class=" roller">
             <span id="rolltext">
-              Your Dream House is awaits here....<br />
+              Your Dream House awaits here....<br />
           </div>
         </h1>
       </div>
@@ -100,9 +135,10 @@
     background: black;
     margin-bottom: 50px;">
     <div
-      style="background-image: url(img/bg-project-highlights2.jpg); background-repeat: no-repeat; background-size:cover;" id="about-us">
+      style="background-image: url(img/bg-project-highlights2.jpg); background-repeat: no-repeat; background-size:cover;"
+      id="about-us">
       <div class="project-highlights">
-        <h2>Project Highlights</h2>
+        <h2 style="font-weight: bolder;">Project Highlights</h2>
         <ul>
           <li class="highlights">
             <h4>Approx 100-140 Sft of Private Lobby for every Flat (Yes, every flat at No additional Cost)</h4>
@@ -275,7 +311,7 @@
     </div>
     <div>
       <div style="text-align: center;">
-        <h2>ARKA Area Location</h2>
+        <h2 style="font-weight: bolder;">Area Location</h2>
       </div>
 
       <div class="iframe-container">
@@ -284,8 +320,8 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
-      <div  class="site-con" id="floor-plans" >
-        <h2 style="text-align: center;">Floor Plans</h2>
+      <div class="site-con" id="floor-plans">
+        <h2 style="text-align: center;font-weight: bolder;">Floor Plans</h2>
         <div class="gallery-wrapper">
           <div class="image-wrapper">
             <a href="#lightbox-image-1">
@@ -344,40 +380,40 @@
     </div>
 
     <div style="margin-bottom: 200px ;" class="gall-con" id="gallery">
-      <h2 style="text-align: center;" class="gall-header">Our Gallery</h2>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="background-color: white">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-          </ol>
-          <div class="carousel-inner" style="padding: 80px;">
-            <div class="item active">
-              <img src="img/01.jpg" alt="First slide" loading="lazy">
-            </div>
-            <div class="item">
-              <img src="img/02.jpg" alt="Second slide" loading="lazy">
-            </div>
-            <div class="item">
-              <img src="img/03.jpg" alt="Third slide" loading="lazy">
-            </div>
-            <div class="item">
-              <img src="img/6.jpg" alt="Fourth slide"  loading="eager">
-            </div>
-            <div class="item">
-              <img src="img/08.jpg" alt="Fifth slide" loading="eager">
-            </div>
-            <div class="item">
-              <img src="img/09.jpg" alt="Sixth slide" loading="eager">
-            </div>
-            <div class="item">
-              <img src="img/10.jpg" alt="Seventh slide" loading="eager">
-            </div>
-            <!-- 
+      <h2 style="text-align: center;font-weight: bolder;" class="gall-header">Our Gallery</h2>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="background-color: white">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        </ol>
+        <div class="carousel-inner" style="padding: 80px;">
+          <div class="item active">
+            <img src="img/01.jpg" alt="First slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/02.jpg" alt="Second slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/03.jpg" alt="Third slide" loading="lazy">
+          </div>
+          <div class="item">
+            <img src="img/6.jpg" alt="Fourth slide" loading="eager">
+          </div>
+          <div class="item">
+            <img src="img/08.jpg" alt="Fifth slide" loading="eager">
+          </div>
+          <div class="item">
+            <img src="img/09.jpg" alt="Sixth slide" loading="eager">
+          </div>
+          <div class="item">
+            <img src="img/10.jpg" alt="Seventh slide" loading="eager">
+          </div>
+          <!--             
             <div class="item">
               <img src="img/08.jpg" alt="Third slide" loading="lazy">
             </div>
@@ -399,8 +435,8 @@
             <div class="item">
               <img src="img/14.jpg" alt="Third slide" loading="lazy">
             </div> -->
-            
-          </div>
+
+        </div>
         <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left"></span>
           <span class="sr-only">Previous</span>
@@ -420,7 +456,7 @@
         <!-- Instagram Icon -->
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
-      <p>&copy; 2024 ARKA. All rights reserved.</p>
+      <p>&copy; 2024 @ARKA. All rights reserved.</p>
     </footer>
 
     <a href="https://api.whatsapp.com/send?phone=7981937439&text=Hey There!!%20there!" class="whatsapp-icon"
