download button functionality is added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     
   <div class="button-container">
-    <input type="button" value="Download Browchure" class="left-button" onclick="DownloadFile('img/Arka Mini Brochure (1).pdf')" />
+    <input type="button" value="Download Browchure" class="right-button" onclick="DownloadFile('img/Arka Mini Brochure (1).pdf')" />
   </div>
   </nav>
   <video id="headvid" autoplay muted loop width="100%">
