--- a/index.html
+++ b/index.html
@@ -466,6 +466,14 @@
         </a>
       </div>
     </div>
+    <div class="about-us" style="background-color: #333333;color: aliceblue;">
+      <div class="project-moto">
+        <p>Team4 Arka is a budget friendly Project located in Manikonda, West Zone and well connected by major road(s) like Nehru Outer Ring Road Hyderabad , Old Mumbai Highway. The total area in which Team4 Arka has been built is 8.8 acre. This project has been developed by Team 4 Life Spaces LLP who are one of the reputed developers in the Hyderabad. The Project current status is New Launch. It has 1204 Units</p>
+      </div>
+      <div>
+        <p>For more info Contact: <a href="tel:8008520708">+91 8008520708</a></p>
+      </div>
+    </div>
     <footer id="contact-us">
       <div class="social-icons" id="contact-us">
         <!-- Facebook Icon -->
@@ -476,12 +484,10 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
       
-      <p>For more info Contact: <a href="tel:8008520708">+91 8008520708</a></p>
-      <p>&copy; 2024 @ ARKA. All rights reserved.</p>
+      <p>  @ARKA 2024 &copy; All rights reserved.</p>
     </footer>
 
-    <a href="https://api.whatsapp.com/send?phone=7981937439&text=Hey There!!%20there!" class="whatsapp-icon"
-      target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=7981937439&text=Hey There!!%20there!" class="btn-whatsapp-pulse btn-whatsapp-pulse-border">
       <i class="fab fa-whatsapp"></i>
     </a>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
