--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#amenities">Amenities</a></li>
         <li><a href="#floor-plans">Floor Plans</a></li>
-        <li><a href="https://api.whatsapp.com/send?phone=7981937439&text=Hey There!!%20there!">Contact Us</a></li>
+        <li><a href="http                                                                   s://mediafiles.botpress.cloud/913f0b64-cad2-4d3c-9b11-989289b30f1c/webchat/bot.html">Our bot</a>
+        </li>
+        <li><a href="https://api.whatsapp.com/send?phone=8712129747&text=Hey There!!%20there!">Contact Us</a></li>
       </ul>
       <h1 class="logo"><img src="https://arkaapartments.com/assets/img/wlogo.png" height="50"></h1>
     </div>
@@ -478,7 +480,7 @@
         <div class="about-us">
           <h3>Contact</h3>
           <p>Phone: <i class="fas fa-phone"></i> <a href="tel:8008520708">+91 8008520708</a></p>
-          <p>Email: </p>
+          <p>Email: thearkaproject2024@gmail.com </p>
         </div>
       </div>
     </div>
@@ -495,7 +497,6 @@
 
       <p> @ARKA 2024 &copy; All rights reserved.</p>
     </footer>
-
     <a href="https://api.whatsapp.com/send?phone=7981937439&text=Hey There!!%20there!"
       class="btn-whatsapp-pulse btn-whatsapp-pulse-border">
       <i class="fab fa-whatsapp"></i>
