--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script defer src="index.js"></script>
   <title>ARKA</title>
+  <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
+    <link rel="icon" href="img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
   <style>
     #carouselExampleIndicators {
       background-color: transparent !important;
@@ -74,9 +77,7 @@
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#amenities">Amenities</a></li>
         <li><a href="#floor-plans">Floor Plans</a></li>
-        <li><a href="http                                                                   s://mediafiles.botpress.cloud/913f0b64-cad2-4d3c-9b11-989289b30f1c/webchat/bot.html">Our bot</a>
-        </li>
-        <li><a href="https://api.whatsapp.com/send?phone=8712129747&text=Hey There!!%20there!">Contact Us</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=+918712129747&text=Hey hi!!">Contact Us</a></li>
       </ul>
       <h1 class="logo"><img src="https://arkaapartments.com/assets/img/wlogo.png" height="50"></h1>
     </div>
@@ -138,8 +139,7 @@
     background: black;
     margin-bottom: 50px;">
     <div
-      style="background-image: url(img/bg-project-highlights2.jpg); background-repeat: no-repeat; background-size:cover;"
-      id="about-us">
+      style="background-image: url(img/bg-project-highlights2.jpg); background-repeat: no-repeat; background-size:cover;">
       <div class="project-highlights">
         <h2 style="font-weight: bolder;">Project Highlights</h2>
         <ul>
@@ -470,7 +470,7 @@
     </div>
     <div style="background-color: #000;">
       <div class="about-us-container">
-        <div class="about-us">
+        <div class="about-us" id="about-us">
           <h2>About Us</h2>
           <p>Team4 Arka is a budget friendly Project located in Manikonda, West Zone and well connected by major road(s)
             like Nehru Outer Ring Road Hyderabad , Old Mumbai Highway. The total area in which Team4 Arka has been built
@@ -497,7 +497,7 @@
 
       <p> @ARKA 2024 &copy; All rights reserved.</p>
     </footer>
-    <a href="https://api.whatsapp.com/send?phone=7981937439&text=Hey There!!%20there!"
+    <a href="https://api.whatsapp.com/send?phone=+918712129747&text=Hey hi!!"
       class="btn-whatsapp-pulse btn-whatsapp-pulse-border">
       <i class="fab fa-whatsapp"></i>
     </a>
